css/style.css
.select-button {
    width: 112px;
}

.notification-top {
    position: fixed;
    top: 20px;
    left: calc(50% - 180px);
    width: 360px;
    text-align: center;
}

.hidden {
    display: none;
}

.invisible {
    visibility: hidden;
}

a.serebii_link {
    color: #4a4a4a;
}

a.serebii_link:hover {
    border-bottom: 2px dotted #4a4a4a;
}

.image.is-40x30 {
  height: 30px;
  width: 40px;
}

.image.is-logo {
    height: 80px;
    width: 218px;
}

.tag_type {
    width: 60px;
}

.type_chart_padding {
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 0px !important;
}

.tag_type_button {
    opacity: 0.4;
}

.tag_selected {
    opacity: 1;
}

.tag_selected:hover {
    opacity: 0.7;
}

.types_row_top {
    margin-bottom: 6px !important;
}

.types_row_bottom {
    margin-top: 6px !important;
}


.type_info_danger {
    color: #ff3860;
}

.chart_type_box {
    text-align: center;
}

.tag_type_Bug {
    background-color: #99cc00;
    color: white;
}
.tag_type_Dark {
    background-color: #333300;
    color: white;
}
.tag_type_Dragon {
    background-color: #003399;
    color: white;
}
.tag_type_Electric {
    background-color: #F0D83C;
    color: white;
}
.tag_type_Fairy {
    background-color: HotPink;
    color: white;
}
.tag_type_Fighting {
    background-color: Sienna;
    color: white;
}
.tag_type_Fire {
    background-color: OrangeRed;
    color: white;
}
.tag_type_Flying {
    background-color: #6699ff;
    color: white;
}
.tag_type_Ghost {
    background-color: Indigo;
    color: white;
}
.tag_type_Grass {
    background-color: #009933;
    color: white;
}
.tag_type_Ground {
    background-color: Peru;
    color: white;
}
.tag_type_Ice {
    background-color: LightSkyBlue;
    color: white;
}
.tag_type_Normal {
    background-color: Silver;
    color: white;
}
.tag_type_Poison {
    background-color: DarkOrchid;
    color: white;
}
.tag_type_Psychic {
    background-color: #cc3399;
    color: white;
}
.tag_type_Rock {
    background-color: Chocolate;
    color: white;
}
.tag_type_Steel {
    background-color: #4c5967;
    color: white;
}
.tag_type_Water {
    background-color: DodgerBlue;
    color: white;
}

.picons {
    background: url("../data/icons.png") no-repeat;
    position: relative;
}

.picon_egg {
    background: url("../data/egg.png") no-repeat;
    background-position: center;
}

.picon_move {
    transform: translate(0px, -4px);
    padding-bottom: 10px;
}

.picon_border {
    position: relative;
}
.picon_border:after {
  content:""; 
  /*background: black; */
  position: absolute; 
  bottom: -4px; 
  left: 0; 
  height: 2px; 
  width: 40px;
}

.picon_border_Bug:after {
    background: #99cc00;
}
.picon_border_Dark:after {
    background: #333300;
}
.picon_border_Dragon:after {
    background: #003399;
}
.picon_border_Electric:after {
    background: #F0D83C;
}
.picon_border_Fairy:after {
    background: HotPink;
}
.picon_border_Fighting:after {
    background: Sienna;
}
.picon_border_Fire:after {
    background: OrangeRed;
}
.picon_border_Flying:after {
    background: #6699ff;
}
.picon_border_Ghost:after {
    background: Indigo;
}
.picon_border_Grass:after {
    background: #009933;
}
.picon_border_Ground:after {
    background: Peru;
}
.picon_border_Ice:after {
    background: LightSkyBlue;
}
.picon_border_Normal:after {
    background: Silver;
}
.picon_border_Poison:after {
    background: DarkOrchid;
}
.picon_border_Psychic:after {
    background: #cc3399;
}
.picon_border_Rock:after {
    background: Chocolate;
}
.picon_border_Steel:after {
    background: #4c5967;
}
.picon_border_Water:after {
    background: DodgerBlue;
}

